# serde-saphyr-benchmark

./: Cargo.toml  README.md  plot_criterion.py  plots.md  summary.csv  summary.md  summary.py  system_info.txt
benches/: compare_json.rs  compare_yaml.rs
figures/: summary.csv  summary.md
figures/json_parse/: summary.csv  summary.md
figures/yaml_parse/: summary.csv  summary.md
src/: duplicate_keys.rs  main.rs
